--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,4 +41,4 @@ set -g status-right-length 40
 set -g status-left-length 40
 set -g status-left '#[fg=purple]#H #[fg=black,bright]#[default]'
 set -g status-left '#[fg=colour153]#H ┃ #[default]'
-set -g status-right '#[fg=colour141]#(cut -d " " -f -3 /proc/loadavg)#[default] ┃ #[fg=colour117]%H:%M '
+set -g status-right '#S #[fg=colour141]#(uptime | tr --squeeze-repeats " " | cut --delimiter=" " --fields=11-13 | sed "s/,//g")#[default] ┃ #[fg=colour117]%H:%M '
