tmux: Keep the terminal title updated

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,10 @@ bind '"' choose-window
 unbind r
 bind r source ~/.tmux.conf
 
+set-option -g set-titles on
+set-window-option -g automatic-rename on
+set-option -g set-titles-string '#T'
+
 set -g terminal-overrides 'xterm*:smcup@:rmcup@:colors=256'
 # Status Bar
 set -g default-terminal "screen-256color"
